add go.mod and go.sum suitecrm: fix date_start and date_end fields update. close #12 bitrix24: add paginate support to "user.get" method bitrix24: add "create_leads" option to create leads for unknown callers

--- a/conf.example.yml
+++ b/conf.example.yml
@@ -30,6 +30,7 @@ bitrix24:
   webhook_originate_token: my_originate_token
   webhook_endpoint_addr: "0.0.0.0:5678"
   # rec_upload: "http://mypbx.example.org/recfiles/"
+  # create_leads: true
   # search_format:
   # - {expr: ".*", repl: "$0"}
   # - {expr: "^\\+(\\d{5})(\\d{7})$", repl: "+$1 $2"} 				# +XXXXX XXXXXXX
