--- a/conf.example.yml
+++ b/conf.example.yml
@@ -24,23 +24,23 @@ dialplan:
 #   - {expr: "^\\d{7}$", repl: "+99878$0"}
 #   dial_format:
 #   - {expr: "^(\\+|)998(\\d{9})$", repl: "$2"}
-bitrix24:
-  default_user: 1
-  webhook_url: https://mycrm.bitrix24.eu/rest/1/mytoken/
-  webhook_originate_token: my_originate_token
-  webhook_endpoint_addr: "0.0.0.0:5678"
-  # rec_upload: "http://mypbx.example.org/recfiles/"
-  # create_leads: true
-  # search_format:
-  # - {expr: ".*", repl: "$0"}
-  # - {expr: "^\\+(\\d{5})(\\d{7})$", repl: "+$1 $2"} 				# +XXXXX XXXXXXX
-  # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "+$1 $2 $3 $4"}	# +XXXXX XXX XX XXX
-  # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "+$1 $2-$3-$4"}	# +XXXXX XXX-XX-XXX
-  # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "$1 $2-$3-$4"} 	# XXXXX XXX XX XX
-  # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "$2 $3 $4"}		# XXX XX XX
-  # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "$2-$3-$4"}		# XXX-XX-XX
-  # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "(+$1) $2-$3-$4"}	# (+XXXXX) XXX-XX-XX
+# bitrix24:
+#   default_user: 1
+#   webhook_url: https://mycrm.bitrix24.eu/rest/1/mytoken/
+#   webhook_originate_token: my_originate_token
+#   webhook_endpoint_addr: "0.0.0.0:5678"
+#   # rec_upload: "http://mypbx.example.org/recfiles/"
+#   # create_leads: true
+#   # search_format:
+#   # - {expr: ".*", repl: "$0"}
+#   # - {expr: "^\\+(\\d{5})(\\d{7})$", repl: "+$1 $2"} 				# +XXXXX XXXXXXX
+#   # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "+$1 $2 $3 $4"}	# +XXXXX XXX XX XXX
+#   # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "+$1 $2-$3-$4"}	# +XXXXX XXX-XX-XXX
+#   # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "$1 $2-$3-$4"} 	# XXXXX XXX XX XX
+#   # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "$2 $3 $4"}		# XXX XX XX
+#   # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "$2-$3-$4"}		# XXX-XX-XX
+#   # - {expr: "^\\+(\\d{5})(\\d{3})(\\d{2})(\\d{2})$", repl: "(+$1) $2-$3-$4"}	# (+XXXXX) XXX-XX-XX
 # suitecrm:
-#   url: http://my.suitecrm/
+#   url: http://localhost/suitecrm/
 #   endpoint_token: my_endpoint_token
 #   endpoint_addr: "0.0.0.0:5678"
