--- a/connect/suitecrm/suitecrm-asterlink-module/extensions/asterlink/app/tsconfig.app.json
+++ b/connect/suitecrm/suitecrm-asterlink-module/extensions/asterlink/app/tsconfig.app.json
@@ -2,7 +2,8 @@
 {
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../out-tsc/app",
+    "outDir": "../../out-tsc/app",
+    "target": "es2022",
     "types": []
   },
   "files": [
