--- a/conf.example.yml
+++ b/conf.example.yml
@@ -30,7 +30,10 @@ dialplan:
 #   webhook_originate_token: my_originate_token
 #   webhook_endpoint_addr: "0.0.0.0:5678"
 #   # rec_upload: "http://mypbx.example.org/recfiles/"
+#   # rec_dir: /var/spool/asterisk/monitor
 #   # create_leads: true
+#   # update_assigned: false
+#   # leads_deals: false
 #   # search_format:
 #   # - {expr: ".*", repl: "$0"}
 #   # - {expr: "^\\+(\\d{5})(\\d{7})$", repl: "+$1 $2"} 				# +XXXXX XXXXXXX
